third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/assign_local_full_invalid.no-opt.exp

Diagnostics:
error: cannot assign to borrowed local `x`
   ┌─ tests/reference-safety/v1-tests/assign_local_full_invalid.move:13:9
   │
12 │         let f = &x;
   │                 -- previous local borrow
13 │         x = 0;
   │         ^^^^^ attempted to assign here
14 │         *f;
   │         -- conflicting reference `f` used here

error: cannot assign to borrowed local `x`
   ┌─ tests/reference-safety/v1-tests/assign_local_full_invalid.move:19:9
   │
18 │         let f = &mut x;
   │                 ------ previous mutable local borrow
19 │         x = 0;
   │         ^^^^^ attempted to assign here
20 │         *f;
   │         -- conflicting reference `f` used here

error: cannot assign to borrowed local `x`
   ┌─ tests/reference-safety/v1-tests/assign_local_full_invalid.move:25:9
   │
24 │         let f = id(&x);
   │                 ------
   │                 │  │
   │                 │  previous local borrow
   │                 used by call result
25 │         x = 0;
   │         ^^^^^ attempted to assign here
26 │         *f;
   │         -- conflicting reference `f` used here

error: cannot assign to borrowed local `x`
   ┌─ tests/reference-safety/v1-tests/assign_local_full_invalid.move:31:9
   │
30 │         let f = id_mut(&mut x);
   │                 --------------
   │                 │      │
   │                 │      previous mutable local borrow
   │                 used by mutable call result
31 │         x = 0;
   │         ^^^^^ attempted to assign here
32 │         *f;
   │         -- conflicting reference `f` used here
